force-app/main/default/objects/loan__MF_Account__c/fields/loan__Account_Type__c.field-meta.xml
<CustomField>
    <fullName>loan__Account_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account Type</description>
    <inlineHelpText>Account Type</inlineHelpText>
    <label>Account Type</label>
    <referenceTo>loan__MF_Account_Type__c</referenceTo>
    <relationshipName>MF_Account</relationshipName>
    <type>Lookup</type>
</CustomField>