force-app/main/default/objects/loan__MF_Account__c/fields/loan__Long_Description__c.field-meta.xml
<CustomField>
    <fullName>loan__Long_Description__c</fullName>
    <label>Long Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>